// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Create "b1" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "b1" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="body1"
/>
`;

exports[`Typography Create "b1" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b1" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
  maxlength="20px"
/>
`;

exports[`Typography Create "b1" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body1"
/>
`;

exports[`Typography Create "b2" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "b2" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="body2"
/>
`;

exports[`Typography Create "b2" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "b2" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
  maxlength="20px"
/>
`;

exports[`Typography Create "b2" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="body2"
/>
`;

exports[`Typography Create "h1" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h1" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
  maxlength="20px"
/>
`;

exports[`Typography Create "h1" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h2" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h2" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h2" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
  maxlength="20px"
/>
`;

exports[`Typography Create "h2" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 3.75em;
}

<h2
  class="emotion-0 emotion-1"
  color="#000"
  id="heading2"
/>
`;

exports[`Typography Create "h3" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h3" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h3" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
  maxlength="20px"
/>
`;

exports[`Typography Create "h3" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 3em;
}

<h3
  class="emotion-0 emotion-1"
  color="#000"
  id="heading3"
/>
`;

exports[`Typography Create "h4" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h4" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h4" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
  maxlength="20px"
/>
`;

exports[`Typography Create "h4" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 2.125em;
}

<h4
  class="emotion-0 emotion-1"
  color="#000"
  id="heading4"
/>
`;

exports[`Typography Create "h5" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h5" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h5" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
  maxlength="20px"
/>
`;

exports[`Typography Create "h5" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.5em;
}

<h5
  class="emotion-0 emotion-1"
  color="#000"
  id="heading5"
/>
`;

exports[`Typography Create "h6" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "h6" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "h6" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
  maxlength="20px"
/>
`;

exports[`Typography Create "h6" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 400;
  font-size: 1.25em;
}

<h6
  class="emotion-0 emotion-1"
  color="#000"
  id="heading6"
/>
`;

exports[`Typography Create "s1" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "s1" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s1" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
  maxlength="20px"
/>
`;

exports[`Typography Create "s1" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 1em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle1"
/>
`;

exports[`Typography Create "s2" element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 6em;
}

<h1
  class="emotion-0 emotion-1"
  color="#000"
  id="heading1"
/>
`;

exports[`Typography Create "s2" element as p element 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<p
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element in bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 700;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element in bolder 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 900;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element in sans-serif 1`] = `
.emotion-0 {
  font-family: sans-serif;
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  font-family="sans-serif"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element in semi-bold 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 600;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element italic 1`] = `
.emotion-0 {
  text-align: start;
  font-style: italic;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element letter-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element underline 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;

exports[`Typography Create "s2" element with maxLength 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 20px;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: break-word;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
  maxlength="20px"
/>
`;

exports[`Typography Create "s2" element word-spacing 1`] = `
.emotion-0 {
  text-align: start;
  font-style: normal;
  margin: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  letter-spacing: normal;
  word-spacing: normal;
  color: #000;
  word-wrap: unset;
  padding: unset;
  word-break: normal;
}

.emotion-0 {
  font-weight: 300;
  font-size: 0.875em;
}

<span
  class="emotion-0 emotion-1"
  color="#000"
  id="subtitle2"
/>
`;
